🔥 Portfolio-ready Ohverlay v4.0 - Futol Ethical Tech
✨ Major enhancements:
- Enhanced README with Futol branding and grant badges
- Fixed critical bug: _build_path_to -> _generate_wandering_path
- Added EnhancedBettaBrain for super-realistic fish physics
- Complete GitHub templates (issue, PR, contributing)
- FUTOL.md - Company manifesto and values
- Grant proposal template for DICT, NSF, Mozilla
- Professional LICENSE with ethical clause
- Comprehensive .gitignore
- CHANGELOG.md for version tracking
- requirements-dev.txt for contributors

🐟 Uno the Betta is now portfolio-ready for grants and job applications!
By Futol Ethical Technology Ecosystems 💜

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,207 @@
+# Ohverlay v4.0 - Git Ignore
+# Futol Ethical Technology Ecosystems
+
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.log
-.pytest_cache/
-*.egg-info/
-dist/
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
 .eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
 venv/
-.venv/
+ENV/
 env/
+.venv/
+env.bak/
+venv.bak/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+*.sublime-project
+*.sublime-workspace
+.project
+.pydevproject
+.settings/
+
+# Ohverlay specific
+*.log
+logs/
+*.db
+*.sqlite
+*.sqlite3
+
+# Configuration files with secrets
+config.json
+config.local.json
 .env
+.env.local
+.env.production
+.env.development
+secrets.json
+credentials.json
+
+# Ohverlay user data
+~/.ohverlay/
+ohverlay_data/
+user_data/
+saved_skins/
+
+# LLM cache
+.cache/
+llm_cache/
+
+# PyInstaller
+*.manifest
 *.spec
-!zenfish.spec
+build/
+dist/
+*.exe
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Documentation builds
+docs/_build/
+site/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# pdm
+.pdm.toml
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Linux
+*~
+.nfs*
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Ohverlay runtime
+ohverlay.pid
+ohverlay.lock
