--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,67 @@
+# Ohverlay v4.0 - ZenFish Desktop Companion
+# By Futol Ethical Technology Ecosystems
+
+# Core UI Framework
 PySide6>=6.5.0
+shiboken6>=6.5.0
+
+# Math & Physics
 numpy>=1.24.0
+
+# Logging
 loguru>=0.7.0
-requests>=2.28.0
+
+# Input handling
 pynput>=1.7.6
 
-# LLM Brain - install the provider you want to use
+# LLM Integration (optional but recommended)
 anthropic>=0.39.0
-# openai>=1.0.0
+openai>=1.0.0
 
-# Optional enhancements
-# feedparser>=6.0.0  # RSS news feeds
+# HTTP requests
+requests>=2.31.0
+urllib3>=2.0.0
+certifi>=2023.7.22
+charset-normalizer>=3.2.0
+idna>=3.4
+
+# Telegram integration
+python-telegram-bot>=20.5
+
+# Async support
+anyio>=4.0.0
+sniffio>=1.3.0
+
+# Webhook server (optional)
+flask>=3.0.0
+werkzeug>=3.0.0
+click>=8.1.0
+itsdangerous>=2.1.0
+
+# Configuration
+pydantic>=2.5.0
+pydantic-core>=2.14.0
+annotated-types>=0.6.0
+
+# Image processing (for vision features)
+Pillow>=10.0.0
+
+# System integration
+psutil>=5.9.6
+
+# Type hints
+typing-extensions>=4.8.0
+
+# Date/time parsing
+python-dateutil>=2.8.2
+six>=1.16.0
+
+# Environment management
+python-dotenv>=1.0.0
+
+# Development dependencies (install with: pip install -r requirements-dev.txt)
+# pytest>=7.4.0
+# pytest-qt>=4.2.0
+# black>=23.9.0
+# flake8>=6.1.0
+# mypy>=1.6.0
