🐟 RAM-based Quality + Realistic Plants v2.0
Smart RAM detection:
- 32GB+ = Ultra-realistic Betta with 60 tail segments
- Lower RAM = Basic efficient fish (fallback)

Realistic Aquatic Plants (3 types):
- Java Fern: Long stems with serrated pointed leaves, rhizome base
- Anubias: Broad oval leaves on petioles, dark waxy look, lateral veins
- Cryptocoryne: Rosette growth, ruffled leaves, textured surface

All plants feature:
- Proper rhizome/crown bases
- Individual leaf shapes (not ellipses!)
- Central veins and lateral veins
- Gentle swaying motion
- Proper gradients for depth

By Futol Ethical Technology Ecosystems 💜

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ annotated-types>=0.6.0
 # Image processing (for vision features)
 Pillow>=10.0.0
 
-# System integration
+# System integration (for RAM detection)
 psutil>=5.9.6
 
 # Type hints
